--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: INTROSPECTION.STDPLUS.ORG
-email: earlye+introspection.stdplus.org@gmail.com
+email: earlye+i11n.stdplus.org@gmail.com
 description: Introspection is a Stdplus library for introspection of your code
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
